# biso-tech-case

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yaml  prestart.sh  pyproject.toml  tests-start.sh
docs/: how-to.md  overview.md  proposta.md
movie-app/: Dockerfile  alembic.ini  feature_eng_model.joblib  pyproject.toml  tests-start.sh
movie-app/api/: main.py
movie-app/api/alembic/: env.py
movie-app/api/alembic/versions/: 2024-05-13_create_movies_table.py  2024-05-14_create_ratings_table.py
movie-app/api/core/v1/: routes.py
movie-app/api/core/v1/auth/: deps.py  exceptions.py  router.py  service.py
movie-app/api/core/v1/movies/: models.py  utils.py
movie-app/api/core/v1/ratings/: models.py  router.py  schemas.py  service.py  utils.py
movie-app/api/core/v1/recommendation/: router.py  schemas.py  service.py
movie-app/api/core/v1/recommendation/ml/: schemas.py  utils.py
movie-app/api/core/v1/recommendation/ml/feature_engineering/: feature_engineering.ipynb  predict.py  training.py
movie-app/api/core/v1/users/: deps.py  exceptions.py  models.py  router.py  service.py  utils.py
movie-app/api/infrastructure/: middleware.py  security.py
movie-app/api/infrastructure/database/: engine.py  session.py  utils.py
movie-app/api/lib/: literals.py  models.py  utils.py
movie-app/api/tests/: fixtures.py  settings.py
movie-app/api/tests/users/: test_crud.py  utils.py
movie-app/scripts/py/: generate_model_f_eng.py  initial_data.py  initial_test_data.py
movie-app/scripts/unix/: install-dev.sh
movie-app/src/: main.py
movie-app/src/alembic/: env.py
movie-app/src/alembic/versions/: 2024-05-12_create_users_table.py
movie-app/src/core/v1/: routes.py
movie-app/src/core/v1/auth/: deps.py  models.py  router.py  service.py
movie-app/src/core/v1/ratings/: schemas.py
movie-app/src/core/v1/users/: deps.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
movie-app/src/infrastructure/: database.py  middleware.py  security.py  settings.py
movie-app/src/infrastructure/database/: engine.py
movie-app/src/lib/: models.py  utils.py
movie-app/src/tests/: fixtures.py
movie-app/src/tests/users/: fixtures.py  test_crud.py  utils.py
scripts/: activate-env.sh
scripts/unix/: migration-create.sh  migration-run.sh
